--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 appdirs==1.4.4
+click==7.1.2
+cycler==0.10.0
 dnspython==2.1.0
 Flask==1.1.2
 Flask-PyMongo==2.3.0
+future==0.18.2
 imutils==0.5.3
 Jinja2==2.11.2
 opencv-contrib-python==4.5.2.52
