--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,20 @@ Flask-PyMongo==2.3.0
 future==0.18.2
 imutils==0.5.3
 Jinja2==2.11.2
+joblib==0.16.0
+kiwisolver==1.2.0
+lzstring==1.0.4
+MarkupSafe==1.1.1
+mpmath==1.1.0
+nose==1.3.7
 opencv-contrib-python==4.5.2.52
+Pillow==7.1.2
+ply==3.11
 pandas==1.2.4
 pymongo==3.11.4
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2021.1
+PyUtilib==6.0.0
 scikit-learn==0.23.2
 gunicorn==20.0.4
