--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==1.1.2
 Flask-PyMongo==2.3.0
 future==0.18.2
 imutils==0.5.3
+itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.16.0
 kiwisolver==1.2.0
@@ -16,7 +17,6 @@ nose==1.3.7
 opencv-contrib-python==4.5.2.52
 Pillow==7.1.2
 ply==3.11
-pandas==1.2.4
 pymongo==3.11.4
 pyparsing==2.4.7
 python-dateutil==2.8.1
