--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ nose==1.3.7
 opencv-contrib-python==4.5.2.52
 ply==3.11
 pymongo==3.11.4
+pandas==1.2.4
 pyparsing==2.4.7
 PyUtilib==6.0.0
 scikit-learn==0.24.2
